--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"generate-sitemap": "node sitemapGenerator.js"
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -19,7 +20,10 @@
 		"react-awesome-reveal": "^4.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.4.0",
+		"react-lazy-load-image-component": "^1.6.3",
 		"react-leaflet": "^4.2.1",
+		"react-router-dom": "^7.1.3",
+		"react-router-sitemap-generator": "^0.0.8",
 		"styled-components": "^6.1.13"
 	},
 	"devDependencies": {
