--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react": "^18.3.1",
 		"react-awesome-reveal": "^4.3.1",
 		"react-dom": "^18.3.1",
+		"react-helmet-async": "^2.0.5",
 		"react-icons": "^5.4.0",
 		"react-lazy-load-image-component": "^1.6.3",
 		"react-leaflet": "^4.2.1",
