--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
+		"@fortawesome/free-brands-svg-icons": "^6.7.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
-		"framer-motion": "^11.15.0",
+		"framer-motion": "^11.18.1",
 		"leaflet": "^1.9.4",
 		"react": "^18.3.1",
 		"react-awesome-reveal": "^4.3.1",
