--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,24 @@
 {
-	"routes": [{ "src": "/(.*)", "dest": "/index.html" }]
+	"rewrites": [
+		{
+			"source": "/(.*)",
+			"destination": "/index.html"
+		}
+	],
+	"headers": [
+		{
+			"source": "/(.*).js",
+			"headers": [{ "key": "Content-Type", "value": "application/javascript" }]
+		},
+		{
+			"source": "/(.*).css",
+			"headers": [{ "key": "Content-Type", "value": "text/css" }]
+		},
+		{
+			"source": "/(.*).webmanifest",
+			"headers": [
+				{ "key": "Content-Type", "value": "application/manifest+json" }
+			]
+		}
+	]
 }
