--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"generate-sitemap": "vite-node sitemapGenerator.js"
 	},
 	"dependencies": {
+		"@emailjs/browser": "^4.4.1",
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
 		"@fortawesome/free-brands-svg-icons": "^6.7.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
